crates/rome_js_formatter/tests/specs/prettier/js/destructuring-private-fields/for-lhs.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
expression: for-lhs.js
---
# Input
```js
class C {
  #x = 1;
  m() {
    let x;
    for ({#x: x} of [this]);
  }
}

```

# Output
```js
class C {
  #x = 1;
  m() {
    let x;
    for ({ #x: x } of [this]);
  }
}

```

# Errors
```
error[SyntaxError]: expected an assignment target, or a rest property but instead found '#x: x'
  ┌─ for-lhs.js:5:11
  │
5 │     for ({#x: x} of [this]);
  │           ^^^^^ Expected an assignment target, or a rest property here


```


